--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,20 @@ dmypy.json
 
 # Environment file
 set_my_howard.sh
+
+# REACT 
+.idea/
+.vscode/
+node_modules/
+build
+.DS_Store
+*.tgz
+my-app*
+template/src/__tests__/__snapshots__/
+lerna-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/.changelog
+.npm/
+yarn.lock
